# neat

./: .gitmodules  CMakeLists.txt
NEAT_test/: CMakeLists.txt  test.cpp
include/: gene_pool.h  neat.h  neat_genomes.h
src/: gene_pool.cpp  neat.cpp  neat_genomes.cpp
